--- a/Hospital/MainWindow.xaml
+++ b/Hospital/MainWindow.xaml
@@ -227,7 +227,7 @@
                                         </Button.Content>
 
                                     </Button>
-                                    <Button x:Name="btnNew" Click="Button_Click_New" Style="{StaticResource DefaultButton}" Margin="10,0,0,0">
+                                    <Button x:Name="btnNew" Click="Button_Click_New" Style="{StaticResource DefaultButton}" Margin="10,2,0,3" Height="Auto">
                                         <Button.Content>
                                             <DockPanel>
                                                 <Image Source="/Hospital;component/Resources/新手术.png" Width="18" Margin="0,0,5,0"></Image>
